# kylix-cli

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLANS.md  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: bench-track.yml  bench.yml  ci.yml  release.yml
dev/bench/: data.js
kylix-bench/: Cargo.toml
kylix-bench/benches/: ml_dsa.rs  ml_kem.rs  slh_dsa.rs
kylix-bench/src/: lib.rs
kylix-cli/: Cargo.toml
kylix-cli/src/: bench.rs  cli.rs  io.rs  macros.rs  main.rs
kylix-cli/src/commands/: completions.rs  decaps.rs  encaps.rs  info.rs  keygen.rs  mod.rs  sign.rs  verify.rs
kylix-cli/tests/: cli_integration.rs
