[workspace]
resolver = "2"
members = ["kylix-cli", "kylix-bench"]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["Crane Valley <dev@crane-valley.co.jp>"]
license = "MIT"
repository = "https://github.com/crane-valley/kylix-cli"

[workspace.dependencies]
# External kylix-pqc (from crates.io)
kylix-pqc = "0.4"

# Internal crates
kylix-bench = { path = "kylix-bench", version = "0.5.0" }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
hex = "0.4"
base64 = "0.22"
anyhow = "1.0"
rand = "0.9"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Benchmark-only dependencies
which = "8.0"
tempfile = "3.10"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
