[package]
name = "kylix-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark utilities for Kylix CLI"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
