[package]
name = "kylix-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Kylix post-quantum cryptography operations"

[[bin]]
name = "kylix"
path = "src/main.rs"

[features]
default = []
bench = ["dep:kylix-bench", "dep:which", "dep:tempfile"]

[dependencies]
kylix-pqc.workspace = true
clap.workspace = true
clap_complete.workspace = true
hex.workspace = true
base64.workspace = true
anyhow.workspace = true
rand.workspace = true
zeroize.workspace = true
serde_json.workspace = true

# Benchmark-only dependencies (optional)
kylix-bench = { workspace = true, optional = true }
which = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true
serde_json.workspace = true
